Fix regression introduced by HAL-1733